@@ -66,6 +66,12 @@
 			<version>0.3.0.RELEASE</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.github.mp911de.microbenchmark-runner</groupId>
+			<artifactId>microbenchmark-runner-extras</artifactId>
+			<version>0.3.0.RELEASE</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 
@@ -78,6 +84,13 @@
 					<compilerArgs>--enable-preview</compilerArgs>
 					<source>19</source>
 					<target>19</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>--enable-preview</argLine>
 				</configuration>
 			</plugin>
 
